--- a/css/style.css
+++ b/css/style.css
@@ -8855,47 +8855,46 @@ body {
 /* line 370, ../scss/fxj/_navbar-header.scss */
 .spb-popup-main-wrapper {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  background: rgba(255, 255, 255, 0.9) url(../logo.svg) no-repeat 10vw 1rem;
-  background-size: 200px;
+  background: rgba(255, 255, 255, 0.9) url(../logo.png) no-repeat 10vw 1rem;
   border: 0; }
-  /* line 376, ../scss/fxj/_navbar-header.scss */
+  /* line 375, ../scss/fxj/_navbar-header.scss */
   .spb-popup-main-wrapper .search-block-form {
     margin: 30vh 10vw 0 10vw; }
-    /* line 379, ../scss/fxj/_navbar-header.scss */
+    /* line 378, ../scss/fxj/_navbar-header.scss */
     .spb-popup-main-wrapper .search-block-form .form-control {
       background-color: transparent;
       font-size: 3rem; }
-      /* line 383, ../scss/fxj/_navbar-header.scss */
+      /* line 382, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::-webkit-input-placeholder {
         /* Chrome/Opera/Safari */
         font-size: 3rem; }
-      /* line 386, ../scss/fxj/_navbar-header.scss */
+      /* line 385, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control:-ms-input-placeholder {
         /* IE 10+ */
         font-size: 3rem; }
-      /* line 389, ../scss/fxj/_navbar-header.scss */
+      /* line 388, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::-ms-input-placeholder {
         font-size: 3rem; }
-      /* line 392, ../scss/fxj/_navbar-header.scss */
+      /* line 391, ../scss/fxj/_navbar-header.scss */
       .spb-popup-main-wrapper .search-block-form .form-control::placeholder {
         font-size: 3rem; }
-    /* line 397, ../scss/fxj/_navbar-header.scss */
+    /* line 396, ../scss/fxj/_navbar-header.scss */
     .spb-popup-main-wrapper .search-block-form .form-submit {
       background-color: transparent;
       font-size: 2rem; }
 
-/* line 403, ../scss/fxj/_navbar-header.scss */
+/* line 402, ../scss/fxj/_navbar-header.scss */
 .spb_top_center {
   bottom: 0;
   left: 0;
   right: 0;
   top: 0; }
 
-/* line 409, ../scss/fxj/_navbar-header.scss */
+/* line 408, ../scss/fxj/_navbar-header.scss */
 .block-fxj-alpha-search-modal-minimize {
   display: none; }
 
-/* line 412, ../scss/fxj/_navbar-header.scss */
+/* line 411, ../scss/fxj/_navbar-header.scss */
 .block-fxj-alpha-search-modal-close {
   width: 4rem;
   height: 4rem;
@@ -8907,18 +8906,18 @@ body {
   right: 10vw;
   top: 1rem; }
 
-/* line 422, ../scss/fxj/_navbar-header.scss */
+/* line 421, ../scss/fxj/_navbar-header.scss */
 #search-popup {
   border: 0;
   color: #777777;
   display: none;
   background-color: transparent;
   border-color: transparent; }
-  /* line 429, ../scss/fxj/_navbar-header.scss */
+  /* line 428, ../scss/fxj/_navbar-header.scss */
   #search-popup:hover, #search-popup:focus {
     color: #16a085; }
 
-/* line 434, ../scss/fxj/_navbar-header.scss */
+/* line 433, ../scss/fxj/_navbar-header.scss */
 .simple-popup-blocks-global + #search-popup {
   display: block;
   font-size: 2rem;
@@ -8927,7 +8926,7 @@ body {
   top: 15px; }
 
 @media (min-width: 768px) {
-  /* line 442, ../scss/fxj/_navbar-header.scss */
+  /* line 441, ../scss/fxj/_navbar-header.scss */
   .simple-popup-blocks-global + #search-popup {
     right: -10px; } }
 /* line 2, ../scss/fxj/_forms.scss */
