refactor(social netwworks): styles and settings

--- a/scss/fxj/_views.scss
+++ b/scss/fxj/_views.scss
@@ -18,6 +18,10 @@
     color: $gray-light;
   }
 }
+.collaborate-footer {
+  margin-left: 15px;
+  margin-right: 15px;
+}
 
 .views-field-field-tipo .field-content {
   background-color: white;
