--- a/scss/fxj/_views.scss
+++ b/scss/fxj/_views.scss
@@ -281,8 +281,8 @@
   }
 }
 .region-sidebar-second {
-  .block[id*="block-colabora"],
-  .block[id*="block-ayudanos"] {
+  .block[id*="colabora"],
+  .block[id*="ayudanos"] {
     padding: 0;
 
     .row {
